# kursovaya_4_oop

./: README.md  pyproject.toml
utils/: 123.py  abstract_class.py  get_hh_info.py  hhru_class.py  main.py  sj_class.py  vacancy_class.py  vacancy_list.json  vacancy_list_hhru.json  vacancy_list_sjru.json  work_function.py
